[BUGFIX] Add proper word wrapping in confval contents

--- a/packages/typo3-docs-theme/assets/sass/components/directives/_confval.scss
+++ b/packages/typo3-docs-theme/assets/sass/components/directives/_confval.scss
@@ -6,6 +6,8 @@ dl.confval {
     padding-bottom: $spacer * .3;
     border: solid 3px $light;
     border-top-color: $gray-500;
+    word-wrap: anywhere;
+    white-space: normal;
     & > dt {
         display: block;
         background-color: $light;
